Made some slight attract mode changes

--- a/.attract/attract.cfg
+++ b/.attract/attract.cfg
@@ -6,8 +6,6 @@ display	Attract Mode Setup
 	in_cycle             yes
 	in_menu              yes
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Kodi
 	layout               kodi
@@ -15,8 +13,6 @@ display	Kodi
 	in_cycle             no
 	in_menu              no
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	MAME (Advance)
 	layout               motionblue_4x3
@@ -28,8 +24,6 @@ display	MAME (Advance)
 	filter               All
 		exception            Name equals pacman
 		rule                 CloneOf not_equals .*
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	MAME (Libretro)
 	layout               motionblue_4x3
@@ -41,8 +35,6 @@ display	MAME (Libretro)
 	filter               All
 		exception            Name equals pacman
 		rule                 CloneOf not_equals .*
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	MAME (Mame4all)
 	layout               motionblue_4x3
@@ -54,8 +46,6 @@ display	MAME (Mame4all)
 	filter               All
 		exception            Name equals pacman
 		rule                 CloneOf not_equals .*
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Nintendo 64
 	layout               Game Station
@@ -65,8 +55,6 @@ display	Nintendo 64
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Nintendo Entertainment System
 	layout               Game Station
@@ -76,8 +64,6 @@ display	Nintendo Entertainment System
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Super Nintendo Entertainment System
 	layout               OlRoom SNES
@@ -87,8 +73,6 @@ display	Super Nintendo Entertainment System
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Sega Dreamcast
 	layout               uni_cade
@@ -98,8 +82,6 @@ display	Sega Dreamcast
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Sega Genesis
 	layout               OlRoom Mega
@@ -109,8 +91,6 @@ display	Sega Genesis
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Sony PlayStation
 	layout               Game Station
@@ -120,8 +100,6 @@ display	Sony PlayStation
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Nintendo Game Boy
 	layout               Game Station
@@ -131,8 +109,6 @@ display	Nintendo Game Boy
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Nintendo Game Boy Advance
 	layout               neon-handheldroom
@@ -142,8 +118,6 @@ display	Nintendo Game Boy Advance
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Nintendo Game Boy Color
 	layout               Game Station
@@ -153,8 +127,6 @@ display	Nintendo Game Boy Color
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 display	Sony PSP
 	layout               Game Station
@@ -164,13 +136,11 @@ display	Sony PSP
 	global_filter
 		rule                 FileIsAvailable equals 1
 	filter               All
-	filter               Favourites
-		rule                 Favourite equals 1
 
 sound
 	sound_volume         100
-	ambient_volume       100
-	movie_volume         100
+	ambient_volume       0
+	movie_volume         0
 	prev_game            selectclick.mp3
 	next_game            selectclick.mp3
 
@@ -220,17 +190,17 @@ general
 	joystick_threshold   75
 	window_mode          fullscreen
 	filter_wrap_mode     default
-	track_usage          yes
-	multiple_monitors    yes
+	track_usage          no
+	multiple_monitors    no
 	smooth_images        yes
 	accelerate_selection yes
 	selection_speed_ms   40
 	scrape_snaps         yes
 	scrape_marquees      yes
 	scrape_flyers        yes
-	scrape_wheels        no
-	scrape_fanart        no
-	scrape_videos        no
+	scrape_wheels        yes
+	scrape_fanart        yes
+	scrape_videos        yes
 	scrape_mamedb
 	scrape_overview
 	video_decoder        mmal
@@ -238,12 +208,12 @@ general
 	menu_layout          nevato
 
 saver_config
-	param                basic_movie Yes
+	param                basic_movie No
 	param                image_collage Yes
-	param                movie_collage Yes
+	param                movie_collage No
 	param                overlay_art wheel
 	param                preserve_ar No
-	param                sound Yes
+	param                sound No
 
 layout_config	robospin-beta
 	param                enable_Lmarquee No
