Added controls for 8butdo controller

--- a/.attract/attract.cfg
+++ b/.attract/attract.cfg
@@ -145,31 +145,30 @@ sound
 	next_game            selectclick.mp3
 
 input_map
-	configure            Tab
-	configure            Joy0 Button4
 	displays_menu        D
 	add_favourite        F
-	back                 Escape
-	back                 Joy0 Button1
-	back                 Backspace
-	back                 Joy0 Button12
 	up                   Up
+	up                   Joy0 PovYneg
 	up                   Joy0 Up
-	up                   Joy0 Button4
 	down                 Down
+	down                 Joy0 PovYpos
 	down                 Joy0 Down
-	down                 Joy0 Button6
 	left                 Left
+	left                 Joy0 PovXneg
 	left                 Joy0 Left
-	left                 Joy0 Button7
 	right                Right
+	right                Joy0 PovXpos
 	right                Joy0 Right
-	right                Joy0 Button5
 	select               Return
-	select               LControl
 	select               Joy0 Button0
-	select               Joy0 Button14
-	select               Joy0 Button13
+	select               Joy0 Button11
+	select               Z
+	back                 Escape
+	back                 Backspace
+	back                 Joy0 Button1
+	back                 X
+	configure            Tab
+	configure            Joy0 Button10
 	default             back	exit
 	default             up	prev_game
 	default             down	next_game
